--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,10 +1,10 @@
 .cart-dropdown-container {
   position: absolute;
-  width: 240px;
+  width: 260px;
   height: 340px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 15px 10px;
   border: 1px solid black;
   background-color: white;
   top: 90px;
